[gd_scene load_steps=19 format=4 uid="uid://cmpgmpa8ujaep"]

[ext_resource type="Script" uid="uid://b5cjum2bxjie8" path="res://Things/game/game.gd" id="1_e2o6t"]
[ext_resource type="Script" uid="uid://d05cggmcq6a5a" path="res://Things/game/world.gd" id="2_feb5d"]
[ext_resource type="PackedScene" uid="uid://bqqhbhgksce7g" path="res://Things/groundItem/ground_item.tscn" id="3_7jktm"]
[ext_resource type="PackedScene" uid="uid://d2q1fhyq0jqdh" path="res://Things/Player/player.tscn" id="3_feb5d"]
[ext_resource type="Texture2D" uid="uid://ck6lpx2cjyx5b" path="res://Assets/tiles.png" id="3_vef74"]
[ext_resource type="Texture2D" uid="uid://cgrkwq0hyo7u" path="res://Assets/ui/water_background.png" id="4_llx8f"]
[ext_resource type="Script" uid="uid://crc412l7pdm8t" path="res://resources/items/ItemStack.gd" id="4_ryrav"]
[ext_resource type="Resource" uid="uid://bq6tclcw7jjm2" path="res://resources/items/flint.tres" id="5_vef74"]
[ext_resource type="PackedScene" uid="uid://dca6gxbd4x8vj" path="res://Things/Tree/tree.tscn" id="6_j5wjh"]
[ext_resource type="PackedScene" uid="uid://pdsg3vi4hlec" path="res://Things/UI/inventory/inventory_display.tscn" id="9_mnftu"]
[ext_resource type="PackedScene" uid="uid://c56e5v11yyxob" path="res://Things/UI/inventory/inventory_item.tscn" id="10_4s8ir"]
[ext_resource type="Texture2D" uid="uid://h0dku8tlh5xa" path="res://Assets/ui/grass_background.png" id="11_f52dp"]
[ext_resource type="Theme" uid="uid://dno3eamcentuu" path="res://Things/UI/theme.tres" id="11_mxcr4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hve3p"]
texture = ExtResource("3_vef74")
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_mfdv2"]
sources/0 = SubResource("TileSetAtlasSource_hve3p")

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_1d1my"]
scenes/1/scene = ExtResource("6_j5wjh")

[sub_resource type="TileSet" id="TileSet_mnftu"]
sources/0 = SubResource("TileSetScenesCollectionSource_1d1my")

[sub_resource type="Resource" id="Resource_eow3j"]
script = ExtResource("4_ryrav")
item = ExtResource("5_vef74")
quantity = 1
metadata/_custom_type_script = "uid://crc412l7pdm8t"

[node name="Game" type="Node"]
script = ExtResource("1_e2o6t")
player_scene = ExtResource("3_feb5d")

[node name="World" type="Node2D" parent="."]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("2_feb5d")

[node name="Background" type="TextureRect" parent="World"]
z_index = -1
anchors_preset = -1
anchor_left = -1.223
anchor_top = -2.082
anchor_right = -1.223
anchor_bottom = -2.082
offset_left = -500.0
offset_top = -362.0
offset_right = 610.0
offset_bottom = 351.0
texture = ExtResource("4_llx8f")
stretch_mode = 1

[node name="Ground" type="TileMapLayer" parent="World"]
z_index = -1
tile_map_data = PackedByteArray("AAD///3/AAAAAAAAAAAAAP3/AAAAAAAAAAD+//v/AAAAAAAAAAD+//r/AAAAAAAAAAD///r/AAAAAAAAAAAAAPr/AAAAAAAAAAAAAPv/AAAAAAAAAAD///v/AAAAAAAAAAD9//v/AAAAAAAAAAD8//v/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAABAP7/AAAAAAAAAAABAP3/AAAAAAAAAAABAPz/AAAAAAAAAAAAAPz/AAAAAAAAAAD///z/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD7/wEAAAAAAAAAAAD7////AAAAAAAAAAD7//7/AAAAAAAAAAD7//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD5//3/AAAAAAAAAAD4//z/AAAAAAAAAAD5//z/AAAAAAAAAAD5//v/AAAAAAAAAAD5//r/AAAAAAAAAAD7//n/AAAAAAAAAAD6//n/AAAAAAAAAAD6//r/AAAAAAAAAAD6//v/AAAAAAAAAAD9//r/AAAAAAAAAAD8//n/AAAAAAAAAAD8//r/AAAAAAAAAAD7//r/AAAAAAAAAAD9//n/AAAAAAAAAAD+//n/AAAAAAAAAAD///n/AAAAAAAAAAAAAPn/AAAAAAAAAAABAPn/AAAAAAAAAAACAPn/AAAAAAAAAAADAPn/AAAAAAAAAAADAPr/AAAAAAAAAAADAPv/AAAAAAAAAAACAPv/AAAAAAAAAAABAPv/AAAAAAAAAAABAPr/AAAAAAAAAAACAPr/AAAAAAAAAAAEAPr/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAD//wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wIAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD8/wQAAAAAAAAAAAD9/wQAAAAAAAAAAAD+/wQAAAAAAAAAAAD//wQAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAACAAQAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAEAAAAAAAAAAAAEAP//AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP3/AAAAAAAAAAADAP3/AAAAAAAAAAACAP3/AAAAAAAAAAD+//3/AAAAAAAAAAD9/wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAACAP//AAAAAAAAAAACAP7/AAAAAAAAAAADAP7/AAAAAAAAAAACAPz/AAAAAAAAAAD+//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wIAAAAAAAAAAAD+/wIAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wIAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAAAAAAAAAAAAAADAP//AAAAAAAAAAD9//7/AAAAAAAAAAAAAP7/AAAAAAAAAAD+//z/AAAAAAAAAAD+//j/AAAAAAAAAAD+////AAAAAAAAAAD///7/AAAAAAAAAAD8//z/AAAAAAAAAAD4//v/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4//3/AAAAAAAAAAD4/wEAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD4//7/AAAAAAAAAAAAAPj/AAAAAAAAAAD///j/AAAAAAAAAAABAPj/AAAAAAAAAAACAPj/AAAAAAAAAAAEAPn/AAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAFAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAHAP7/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAP//AAAAAAAAAAAHAP3/AAAAAAAAAAAIAP3/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAALAP//AAAAAAAAAAALAP7/AAAAAAAAAAALAP3/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAPz/AAAAAAAAAAAJAPz/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAPv/AAAAAAAAAAAHAPv/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPr/AAAAAAAAAAAHAPz/AAAAAAAAAAALAPz/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAALAPv/AAAAAAAAAAAKAPv/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPr/AAAAAAAAAAAIAPr/AAAAAAAAAAAIAPn/AAAAAAAAAAAHAPn/AAAAAAAAAAAGAPn/AAAAAAAAAAAFAPj/AAAAAAAAAAAEAPj/AAAAAAAAAAADAPj/AAAAAAAAAAAHAPr/AAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAADAAEAAAAAAAAAAAADAPz/AAAAAAAAAAD9//j/AAAAAAAAAAD8//j/AAAAAAAAAAD7//j/AAAAAAAAAAD6//j/AAAAAAAAAAD5//j/AAAAAAAAAAD5//n/AAAAAAAAAAD4//n/AAAAAAAAAAD4//r/AAAAAAAAAAD3//r/AAAAAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD1//z/AAAAAAAAAAD1//3/AAAAAAAAAAD1//7/AAAAAAAAAAD1////AAAAAAAAAAD2/wAAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAAD4/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD6/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD//wUAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAIAAAAAAAAAAAALAAEAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAP//AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAPv/AAAAAAAAAAAMAPr/AAAAAAAAAAALAPr/AAAAAAAAAAALAPn/AAAAAAAAAAAKAPj/AAAAAAAAAAAJAPj/AAAAAAAAAAAJAPf/AAAAAAAAAAAIAPf/AAAAAAAAAAAHAPf/AAAAAAAAAAAGAPf/AAAAAAAAAAAFAPf/AAAAAAAAAAAFAPb/AAAAAAAAAAAEAPb/AAAAAAAAAAADAPb/AAAAAAAAAAACAPb/AAAAAAAAAAABAPb/AAAAAAAAAAAAAPb/AAAAAAAAAAD///b/AAAAAAAAAAD+//b/AAAAAAAAAAD9//b/AAAAAAAAAAD8//b/AAAAAAAAAAD7//b/AAAAAAAAAAD6//b/AAAAAAAAAAD5//b/AAAAAAAAAAD5//f/AAAAAAAAAAD4//f/AAAAAAAAAAD4//j/AAAAAAAAAAD3//j/AAAAAAAAAAD3//n/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD3/wAAAAAAAAAAAAD3/wEAAAAAAAAAAAD4/wIAAAAAAAAAAAAGAAQAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAPn/AAAAAAAAAAAIAPj/AAAAAAAAAAAHAPj/AAAAAAAAAAAGAPj/AAAAAAAAAAAEAPf/AAAAAAAAAAADAPf/AAAAAAAAAAACAPf/AAAAAAAAAAABAPf/AAAAAAAAAAAAAPf/AAAAAAAAAAD///f/AAAAAAAAAAD+//f/AAAAAAAAAAD9//f/AAAAAAAAAAD8//f/AAAAAAAAAAD7//f/AAAAAAAAAAD6//f/AAAAAAAAAAAKAPn/AAAAAAAAAAAMAPn/AAAAAAAAAAAKAPr/AAAAAAAAAAADAPT/AAAAAAAAAAACAPT/AAAAAAAAAAABAPT/AAAAAAAAAAAAAPT/AAAAAAAAAAD///T/AAAAAAAAAAD+//T/AAAAAAAAAAD9//T/AAAAAAAAAAD8//T/AAAAAAAAAAD7//T/AAAAAAAAAAD6//T/AAAAAAAAAAD5//X/AAAAAAAAAAD4//X/AAAAAAAAAAD3//b/AAAAAAAAAAD2//b/AAABAAAAAAD2//f/AAAAAAAAAAD2//j/AAAAAAAAAAD1//j/AAAAAAAAAAD1//n/AAAAAAAAAAD1//r/AAAAAAAAAAD1//v/AAAAAAAAAAD1/wAAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD4/wUAAAAAAAAAAAD5/wUAAAAAAAAAAAD6/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAYAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAANAAIAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAPAP7/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAPv/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPr/AAAAAAAAAAAOAPn/AAAAAAAAAAANAPn/AAAAAAAAAAANAPj/AAAAAAAAAAAMAPj/AAAAAAAAAAAMAPf/AAAAAAAAAAALAPf/AAAAAAAAAAAKAPf/AAAAAAAAAAAKAPb/AAAAAAAAAAAJAPb/AAAAAAAAAAAIAPb/AAAAAAAAAAAIAPX/AAAAAAAAAAAHAPX/AAAAAAAAAAAGAPX/AAAAAAAAAAAFAPT/AAAAAAAAAAAEAPT/AAAAAAAAAAABAPX/AAAAAAAAAAAAAPX/AAAAAAAAAAD///X/AAAAAAAAAAD+//X/AAAAAAAAAAD9//X/AAAAAAAAAAD8//X/AAAAAAAAAAD7//X/AAAAAAAAAAD6//X/AAAAAAAAAAD4//b/AAAAAAAAAAD3//f/AAAAAAAAAAD2//n/AAAAAAAAAAAFAPX/AAAAAAAAAAAEAPX/AAAAAAAAAAADAPX/AAAAAAAAAAACAPX/AAAAAAAAAAAGAPb/AAAAAAAAAAAHAPb/AAAAAAAAAAALAPj/AAAAAAAAAAANAPr/AAAAAAAAAAANAPv/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAP7/AAAAAAAAAAANAP3/AAAAAAAAAAANAPz/AAAAAAAAAAANAP7/AAAAAAAAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAALAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAABAAYAAAAAAAAAAAD4/wQAAAAAAAAAAAALAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAD0//j/AAABAAAAAAD0/wIAAAABAAAAAAD0/wEAAAABAAAAAAD0/wAAAAABAAAAAAD0////AAABAAAAAAD0//7/AAABAAAAAAD0//3/AAABAAAAAAD0//z/AAABAAAAAAD0//v/AAABAAAAAAD0//r/AAABAAAAAAD0//n/AAABAAAAAAD0//f/AAABAAAAAAD1//f/AAABAAAAAAD1//b/AAABAAAAAAD1//X/AAABAAAAAAD2//X/AAABAAAAAAD2//T/AAABAAAAAAD3//T/AAABAAAAAAD4//T/AAABAAAAAAD5//T/AAABAAAAAAD5//P/AAABAAAAAAD6//P/AAABAAAAAAD4//P/AAABAAAAAAD3//P/AAABAAAAAAD7//P/AAABAAAAAAD8//P/AAABAAAAAAD9//P/AAABAAAAAAD+//P/AAABAAAAAAD///P/AAABAAAAAAAAAPP/AAABAAAAAAABAPP/AAABAAAAAAACAPP/AAABAAAAAAADAPP/AAABAAAAAAAEAPP/AAABAAAAAAAFAPP/AAABAAAAAAAGAPP/AAABAAAAAAAFAPL/AAABAAAAAAAEAPL/AAABAAAAAAADAPL/AAABAAAAAAACAPL/AAABAAAAAAABAPL/AAABAAAAAAAAAPL/AAABAAAAAAD///L/AAABAAAAAAD+//L/AAABAAAAAAD7//L/AAABAAAAAAD8//L/AAABAAAAAAD9//L/AAABAAAAAAAHAPL/AAABAAAAAAAHAPP/AAABAAAAAAAGAPT/AAABAAAAAAAHAPT/AAABAAAAAAAIAPP/AAABAAAAAAAIAPL/AAABAAAAAAAGAPL/AAABAAAAAAAJAPP/AAABAAAAAAAJAPT/AAABAAAAAAAKAPT/AAABAAAAAAALAPT/AAABAAAAAAALAPX/AAABAAAAAAAMAPX/AAABAAAAAAANAPX/AAABAAAAAAANAPb/AAABAAAAAAAOAPb/AAABAAAAAAAPAPb/AAABAAAAAAAPAPf/AAABAAAAAAAPAPj/AAABAAAAAAAQAPj/AAABAAAAAAAQAPn/AAABAAAAAAAQAPr/AAABAAAAAAAQAPv/AAABAAAAAAARAPz/AAABAAAAAAARAP3/AAABAAAAAAARAP7/AAABAAAAAAARAP//AAABAAAAAAARAAAAAAABAAAAAAARAAEAAAABAAAAAAAQAAEAAAABAAAAAAAQAAIAAAABAAAAAAAQAAMAAAABAAAAAAAPAAMAAAABAAAAAAAPAAQAAAABAAAAAAAOAAQAAAABAAAAAAAOAAUAAAABAAAAAAAOAAYAAAABAAAAAAANAAYAAAABAAAAAAANAAcAAAABAAAAAAAMAAcAAAABAAAAAAAMAAgAAAABAAAAAAALAAgAAAABAAAAAAAKAAgAAAABAAAAAAAKAAkAAAABAAAAAAAJAAkAAAABAAAAAAAIAAkAAAABAAAAAAAHAAkAAAABAAAAAAAGAAkAAAABAAAAAAAFAAkAAAABAAAAAAAEAAkAAAABAAAAAAADAAkAAAABAAAAAAACAAkAAAABAAAAAAABAAkAAAABAAAAAAAAAAkAAAABAAAAAAD//wkAAAABAAAAAAD+/wkAAAABAAAAAAD+/wgAAAABAAAAAAD9/wgAAAABAAAAAAD8/wgAAAABAAAAAAD7/wgAAAABAAAAAAD6/wgAAAABAAAAAAD5/wgAAAABAAAAAAD5/wcAAAABAAAAAAD4/wcAAAABAAAAAAD3/wcAAAABAAAAAAD3/wYAAAABAAAAAAD2/wYAAAABAAAAAAD1/wYAAAABAAAAAAD0/wYAAAABAAAAAAD0/wUAAAABAAAAAAD0/wQAAAABAAAAAAD0/wMAAAABAAAAAADz/wMAAAABAAAAAADz/wIAAAABAAAAAADz/wEAAAABAAAAAADz/wAAAAABAAAAAADz////AAABAAAAAADz//7/AAABAAAAAADz//3/AAABAAAAAADz//z/AAABAAAAAADz//v/AAABAAAAAADz//r/AAABAAAAAADz//n/AAABAAAAAADz//j/AAABAAAAAAD0//b/AAABAAAAAAD1/wUAAAABAAAAAAD1/wQAAAABAAAAAAD1/wMAAAABAAAAAAD2/wUAAAABAAAAAAD3//X/AAABAAAAAAAIAPT/AAABAAAAAAAJAPX/AAABAAAAAAAKAPX/AAABAAAAAAALAPb/AAABAAAAAAAMAPb/AAABAAAAAAAOAPf/AAABAAAAAAANAPf/AAABAAAAAAAOAPj/AAABAAAAAAAPAPn/AAABAAAAAAAPAPr/AAABAAAAAAAQAP7/AAABAAAAAAAQAP3/AAABAAAAAAAQAPz/AAABAAAAAAAQAP//AAABAAAAAAAQAAAAAAABAAAAAAAPAAAAAAABAAAAAAAPAAEAAAABAAAAAAAPAAIAAAABAAAAAAAOAAIAAAABAAAAAAAOAAMAAAABAAAAAAANAAQAAAABAAAAAAANAAUAAAABAAAAAAAMAAYAAAABAAAAAAAKAAcAAAABAAAAAAAJAAcAAAABAAAAAAAJAAgAAAABAAAAAAAIAAgAAAABAAAAAAAHAAgAAAABAAAAAAAGAAgAAAABAAAAAAAFAAgAAAABAAAAAAAEAAgAAAABAAAAAAADAAgAAAABAAAAAAACAAgAAAABAAAAAAABAAgAAAABAAAAAAAAAAgAAAABAAAAAAAAAAcAAAABAAAAAAD//wcAAAABAAAAAAD+/wcAAAABAAAAAAD9/wcAAAABAAAAAAD8/wcAAAABAAAAAAD7/wcAAAABAAAAAAD6/wcAAAABAAAAAAD6/wYAAAABAAAAAAD5/wYAAAABAAAAAAD4/wYAAAABAAAAAAD//wgAAAABAAAAAAALAAcAAAABAAAAAAD2/wcAAAABAAAAAAD9/wkAAAABAAAAAAA=")
tile_set = SubResource("TileSet_mfdv2")
metadata/_edit_lock_ = true

[node name="Entities" type="TileMapLayer" parent="World"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD7////AAAAAAAAAQD+//z/AAAAAAAAAQACAP3/AAAAAAAAAQAHAPv/AAAAAAAAAQD7//r/AAAAAAAAAQADAPn/AAAAAAAAAQAJAP7/AAAAAAAAAQA=")
tile_set = SubResource("TileSet_mnftu")

[node name="Items" type="Node2D" parent="World"]
unique_name_in_owner = true

[node name="GroundItem" parent="World/Items" instance=ExtResource("3_7jktm")]
position = Vector2(16, 32)
item_stack = SubResource("Resource_eow3j")

[node name="Camera" type="Camera2D" parent="World"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="InventoryDisplay" parent="UILayer" instance=ExtResource("9_mnftu")]
visible = false
inventory_item_scene = ExtResource("10_4s8ir")

[node name="Menu" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_mxcr4")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="UILayer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
texture = ExtResource("11_f52dp")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/Menu/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -17.5
offset_right = 49.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="Username" type="TextEdit" parent="UILayer/Menu/Background/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
focus_mode = 1
placeholder_text = "username"
scroll_fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/Menu/Background/VBoxContainer"]
layout_mode = 2

[node name="Address" type="TextEdit" parent="UILayer/Menu/Background/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
placeholder_text = "address"
scroll_past_end_of_file = true
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="Port" type="TextEdit" parent="UILayer/Menu/Background/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 8
placeholder_text = "port"
scroll_past_end_of_file = true
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="HBoxContainer2" type="HBoxContainer" parent="UILayer/Menu/Background/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="UILayer/Menu/Background/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "HOST
"

[node name="Join" type="Button" parent="UILayer/Menu/Background/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "JOIN
"

[connection signal="text_changed" from="UILayer/Menu/Background/VBoxContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="pressed" from="UILayer/Menu/Background/VBoxContainer/HBoxContainer2/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UILayer/Menu/Background/VBoxContainer/HBoxContainer2/Join" to="." method="_on_join_pressed"]
